--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <div class="container">
     <img class="imagem" src="MILHAO.jpg" alt="">
     <div class="questao"> 
-        <h1>Quantos noves tem de 0 a 100?</h1>
+        <h1>Quantos anos tem a Xuxa?</h1>
     </div>
     <div class="botoes">
-        <button class="botao" onclick="verificarResposta(1)">10</button>
-        <button class="botao" onclick="verificarResposta(2)">11</button>
-        <button class="botao" onclick="verificarResposta(3)">20</button>
-        <button class="botao" onclick="verificarResposta(4)">21</button>
+        <button class="botao" onclick="verificarResposta(1)">70</button>
+        <button class="botao" onclick="verificarResposta(2)">57</button>
+        <button class="botao" onclick="verificarResposta(3)">61</button>
+        <button class="botao" onclick="verificarResposta(4)">71</button>
     </div>
     <div id="resultado"></div>
 </div>
 <footer class="nomes">
     <p>Feito na aula de Matematica II- Turma 3°B</p>
-    <p> Por Prof. Rafaela Garbin</p>
+    <p> Maria Eduarda Ribeiro Marini,Ana Clara e Isabella</p>
 </footer>
 
 <audio src="som/silvio-santos-certa-resposta.mp3" id="audio_acerto"></audio>
